<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/logoutBttn"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="56dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/logoutText"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tripBttn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tripBttn"
        android:layout_width="114dp"
        android:layout_height="46dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="56dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/dText"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/cName"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tPtext"
        android:layout_width="187dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textSize="20dp"
        android:text="@string/tmaText"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameT" />

    <RelativeLayout
        android:id="@+id/line_bar"
        android:layout_width="130dp"
        android:layout_height="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="88dp"
        android:background="@drawable/line_bar"
        app:layout_constraintBottom_toTopOf="@+id/totalP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tPtext"
        app:layout_constraintVertical_bias="0.0"></RelativeLayout>

    <EditText
        android:id="@+id/totalP"
        android:layout_width="126dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="175dp"
        android:ems="10"
        android:hint="@string/payText"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/logoutBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>